--- a/whiteboard/Info.plist
+++ b/whiteboard/Info.plist
@@ -20,6 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSAppleMusicUsageDescription</key>
+	<string>需要访问媒体资源库</string>
+	<key>NSCameraUsageDescription</key>
+	<string>需要使用您的相机</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>需要访问您的相册</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>iconfont.ttf</string>
